client: wait for lastest osdmap when handling set file/dir layout

Fixes: http://tracker.ceph.com/issues/18914
Signed-off-by: "Yan, Zheng" <zyan@redhat.com>
(cherry picked from commit 76f5eb86cdd61dde4e6c7cfeb5cf34f0c0334f21)